--- a/style.css
+++ b/style.css
@@ -5,11 +5,15 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 40px;
+}
 .Orange-color {
   color: orange;
 }
-.front-intro {
+.full-package {
   display: flex;
+  margin-bottom: 100px;
 }
 
 .top-banner {
@@ -36,8 +40,32 @@ h1 {
   border-radius: 5%;
   color: white;
 }
+.bottom-bg {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
 .half-width-shadow {
   width: 40%;
-  padding-left: 5%;
-  padding-right: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+  padding: 2%;
+
+  border-radius: 2%;
+  box-shadow: 10px 10px 40px gray;
+}
+#shadow-1 {
+  border-left: 7px solid;
+  border-image: linear-gradient(tomato, orange);
+  border-image-slice: 1;
+}
+
+#shadow-2 {
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+footer {
+  text-align: center;
 }
